--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
                 <div class = "copyright-text">
                     <h1>Desing :- <br>
                    
-Eng :- Abdul Ghani Mamdouh<br>
+Eng :-Eslam Mamdouh<br>
                     <span>
                          <i class = "fa fa-whatsapp"></i>
                          <i class = "fa fa-phone"></i>
